--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@
   }
   
   /* Style the links inside the navigation bar */
-  .topnav a {
+  .topnav a, .underline {
 	float: left;
 	display: block;
 	color: #f9c37a;
@@ -26,6 +26,7 @@
 	text-decoration: none;
 	font-size: 17px;
 	font-weight: 525;
+	white-space: wrap;
   }
   
   /* Change the color of links on hover */
@@ -34,14 +35,41 @@
 	color: black;
 	font-weight: bold;
   }
+
+  /* Less padding for the Home button (logo) */
+  .topnav a.active {
+	padding: 7px 8px;
+  }
   
   /* Hide the link that should open and close the topnav on small screens */
   .topnav .icon {
 	display: none;
   }
+  .topnav .lang, .lang1 {
+	color: #ddd;
+	padding-right: 5px;
+	padding-left: 5px;
+  }
 
-/* When the screen is less than 880 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 880px) {
+  .topnav .lang1 {
+	color: #ddd;
+	font-weight: 1000;
+	text-decoration: overline;
+  }
+
+  .topnav .underline {
+	color: #ddd;
+	padding-right: 5px;
+	padding-left: 5px;
+	padding-bottom: 0;
+	padding-top: 1;
+	margin: 0;
+	white-space: wrap;
+	display: inline;
+  }
+
+/* When the screen is less than 950 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 950px) {
 	.topnav a:not(:first-child) {display: none;}
 	.topnav a.icon {
 	  float: right;
@@ -50,7 +78,7 @@
   }
   
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 950px) {
 	.topnav.responsive {position: fixed;}
 	.topnav.responsive a.icon {
 	  position: absolute;
@@ -2583,7 +2611,7 @@ input, select, textarea {
 			height: 100%;
 			left: 0;
 			position: absolute;
-			top: 3rem;
+			top: 3frem;
 			width: 100%;
 		}
 
