--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,14 +30,15 @@
   }
   
   /* Change the color of links on hover */
-  .topnav a:hover {
+  .topnav a:not(.brand):hover{
 	background-color: #ddd;
 	color: black;
 	font-weight: bold;
   }
 
+  
   /* Less padding for the Home button (logo) */
-  .topnav a.active {
+  .topnav a.active{
 	padding: 7px 8px;
   }
   
@@ -71,6 +72,7 @@
 /* When the screen is less than 950 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 1250px) {
 	.topnav a:not(:first-child) {display: none;}
+	.topnav a.brand {display: block;}
 	.topnav a.icon {
 	  float: right;
 	  display: block;
@@ -90,6 +92,11 @@
 	  display: block;
 	  text-align: left;
 	}
+  }
+
+  /*For Chocoparty Co.*/
+  @media screen and (min-width: 1251px) {
+	.topnav a.brand {display: none;}
   }
 
 html, body, div, span, applet, object,
